--- a/IaC/besteam-iaas/besteam-v1-web-website/ingress.yaml
+++ b/IaC/besteam-iaas/besteam-v1-web-website/ingress.yaml
@@ -1,3 +1,51 @@
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: besteam-v1-web-website
+#  namespace: besteam-iaas
+#  labels:
+#    app: besteam-v1-web-website
+#  annotations:
+#    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
+#  #  nginx.ingress.kubernetes.io/permanent-redirect: https://www.besteam.io
+#  #  #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+#spec:
+#  ingressClassName: nginx
+#  rules:
+#  - host: www.besteam.io
+#    http:
+#      paths:
+#        -  path: /
+#           pathType: Prefix
+#           backend:
+#            service:
+#              name: besteam-v1-web-website
+#              port:
+#                number: 80
+#  tls:
+#  - hosts:
+#    - www.besteam.io
+#    secretName: tls-besteamio
+#---
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: besteam-v1-web-website-redirect
+#  namespace: besteam-iaas
+#  labels:
+#    app: besteam-v1-web-website-redirect
+#  annotations:
+#    nginx.ingress.kubernetes.io/permanent-redirect: https://www.besteam.io
+#    #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+#spec:
+#  ingressClassName: nginx
+#  rules:
+#    - host: besteam.io
+#  tls:
+#    - hosts:
+#      - besteam.io
+#      secretName: tls-besteamio
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -7,42 +55,23 @@ metadata:
     app: besteam-v1-web-website
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-  #  nginx.ingress.kubernetes.io/permanent-redirect: https://www.besteam.io
+  #  nginx.ingress.kubernetes.io/permanent-redirect: https://dev.besteam.io
   #  #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
 spec:
   ingressClassName: nginx
   rules:
-  - host: www.besteam.io
-    http:
-      paths:
-        -  path: /
-           pathType: Prefix
-           backend:
-            service:
-              name: besteam-v1-web-website
-              port:
-                number: 80
-  tls:
-  - hosts:
-    - www.besteam.io
-    secretName: tls-besteamio
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: besteam-v1-web-website-redirect
-  namespace: besteam-iaas
-  labels:
-    app: besteam-v1-web-website-redirect
-  annotations:
-    nginx.ingress.kubernetes.io/permanent-redirect: https://www.besteam.io
-    #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: besteam.io
+    - host: dev.besteam.io
+      http:
+        paths:
+          -  path: /
+             pathType: Prefix
+             backend:
+               service:
+                 name: besteam-v1-web-website
+                 port:
+                   number: 80
   tls:
     - hosts:
-      - besteam.io
+        - dev.besteam.io
       secretName: tls-besteamio
 
