--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -102,6 +102,11 @@ atlassian*
 /app/code/Apm/*
 !/app/code/Apm/.gitkeep
 
+# Domain Billing Excludes
+!/app/code/Billing
+/app/code/Billing/*
+!/app/code/Billing/.gitkeep
+
 # Domain Cmdb Excludes
 !/app/code/Cmdb
 /app/code/Cmdb/*
@@ -161,6 +166,11 @@ atlassian*
 !/app/code/Security
 /app/code/Security/*
 !/app/code/Security/.gitkeep
+
+# Domain Support Excludes
+!/app/code/Support
+/app/code/Support/*
+!/app/code/Support/.gitkeep
 
 # Product XPipe Excludes
 !/app/code/Pipe
