--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/configmap.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/configmap.yaml
@@ -14,6 +14,7 @@ data:
   CORE_PRODUCT_NAME: "XPipe"
   CORE_PRODUCT_VERSION: "1.0"
   CORE_STOREVIEW_ITALIAN_TOGGLE: "1"
+  CORE_CONFIG_TENANT: "Besteam"
   # Fnd
   FND_COLLECTOR_BASE_URL: "https://lucapitzoi-api-fnd-xpipe.sindria.org"
   # Iam
