map support envs

--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/deployment.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/deployment.yaml
@@ -173,56 +173,76 @@ spec:
             configMapKeyRef:
               key: PIPELINES_CONFIGMAP_VAULT_BASE_URL
               name: xpipe-v1-web-portal-config
+        - name: PIPELINES_DEDICATED_GITHUB_TENANT
+          valueFrom:
+            configMapKeyRef:
+              key: PIPELINES_DEDICATED_GITHUB_TENANT
+              name: xpipe-v1-web-portal-config
         - name: PIPELINES_DEDICATED_GITHUB_ORGANIZATION
           valueFrom:
             configMapKeyRef:
               key: PIPELINES_DEDICATED_GITHUB_ORGANIZATION
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_REPOSITORY
+        - name: PIPELINES_DEDICATED_GITHUB_REPOSITORY
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_REPOSITORY
+              key: PIPELINES_DEDICATED_GITHUB_REPOSITORY
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_NAME
+
+        # Support Config
+        - name: SUPPORT_SERVICEDESK_GITHUB_ORGANIZATION
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_NAME
+              key: SUPPORT_SERVICEDESK_GITHUB_ORGANIZATION
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_NUMBER
+        - name: SUPPORT_SERVICEDESK_GITHUB_REPOSITORY
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_NUMBER
+              key: SUPPORT_SERVICEDESK_GITHUB_REPOSITORY
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_ID
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_NAME
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_ID
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_NAME
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_TRIAGE
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_NUMBER
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_TRIAGE
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_NUMBER
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_APPROVED
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_ID
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_APPROVED
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_ID
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_IN_PROGRESS
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_TRIAGE
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_IN_PROGRESS
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_TRIAGE
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_IN_REVIEW
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_APPROVED
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_IN_REVIEW
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_APPROVED
               name: xpipe-v1-web-portal-config
-        - name: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_DONE
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_IN_PROGRESS
           valueFrom:
             configMapKeyRef:
-              key: PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_DONE
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_IN_PROGRESS
               name: xpipe-v1-web-portal-config
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_IN_REVIEW
+          valueFrom:
+            configMapKeyRef:
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_IN_REVIEW
+              name: xpipe-v1-web-portal-config
+        - name: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_CLOSED
+          valueFrom:
+            configMapKeyRef:
+              key: SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_CLOSED
+              name: xpipe-v1-web-portal-config
+
+
+
         # Lab Config
         - name: LAB_COLLECTOR_BASE_URL
           valueFrom:
