--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/configmap.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/configmap.yaml
@@ -22,17 +22,20 @@ data:
   # Pipelines
   PIPELINES_COLLECTOR_BASE_URL: "https://lucapitzoi-api-pipelines-xpipe.sindria.org"
   PIPELINES_CONFIGMAP_VAULT_BASE_URL: "https://dev-vault-xpipe.sindria.org"
-  PIPELINES_DEDICATED_GITHUB_ORGANIZATION: "BesteamPipelines"
-  PIPELINES_DEDICATED_FORM_GITHUB_ORGANIZATION: "SindriaInc"
-  PIPELINES_DEDICATED_FORM_GITHUB_REPOSITORY: "XPipe"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_NAME: "XPipe Service Desk"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_NUMBER: "5"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_ID: "PVTSSF_lADOAkAMSM4A_Vq0zgyeNWA"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_TRIAGE: "f75ad846"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_APPROVED: "61e4505c"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_IN_PROGRESS: "47fc9ee4"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_IN_REVIEW: "df73e18b"
-  PIPELINES_DEDICATED_FORM_GITHUB_PROJECT_STATUS_OPTION_DONE: "98236657"
+  PIPELINES_DEDICATED_GITHUB_TENANT: "BesteamPipelines"
+  PIPELINES_DEDICATED_GITHUB_ORGANIZATION: "SindriaInc"
+  PIPELINES_DEDICATED_GITHUB_REPOSITORY: "XPipe"
+  # Support
+  SUPPORT_SERVICEDESK_GITHUB_ORGANIZATION: "SindriaInc"
+  SUPPORT_SERVICEDESK_GITHUB_REPOSITORY: "XPipe"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_NAME: "XPipe Service Desk"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_NUMBER: "5"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_ID: "PVTSSF_lADOAkAMSM4A_Vq0zgyeNWA"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_TRIAGE: "f75ad846"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_APPROVED: "61e4505c"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_IN_PROGRESS: "47fc9ee4"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_IN_REVIEW: "df73e18b"
+  SUPPORT_SERVICEDESK_GITHUB_PROJECT_STATUS_OPTION_CLOSED: "98236657"
   # Lab
   LAB_COLLECTOR_BASE_URL: "https://lucapitzoi-api-lab-xpipe.sindria.org"
 
