init owner role module

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -249,6 +249,7 @@ atlassian*
 !/app/code/Pipe/IndividualRole
 !/app/code/Pipe/ProRole
 !/app/code/Pipe/EnterpriseRole
+!/app/code/Pipe/OwnerRole
 !/app/code/Pipe/DebugSession
 !/app/code/Pipe/TemplateCatalog
 !/app/code/Pipe/PostLoginSetup
