Lab: update xdev

--- a/Lab/Base/xdev/main/src/Dockerfile
+++ b/Lab/Base/xdev/main/src/Dockerfile
@@ -1,5 +1,5 @@
 # Extends xdev wrapper
-FROM sindriainc/xdev:6.0.0-wrapper
+FROM sindriainc/xdev:6.1.0-wrapper
 
 ARG TAG_VERSION
 ARG XDEV_DISPLAY
@@ -12,9 +12,9 @@ ENV DISPLAY ${XDEV_DISPLAY}
 ENV FIREFOX_DEVELOPER_VERSION 108.0b6
 #ENV PHPSTORM_VERSION 2022.2.3
 #ENV PYCHARM_VERSION 2022.2.4
-ENV PYCHARM_COMMUNITY_VERSION 2022.2.4
+#ENV PYCHARM_COMMUNITY_VERSION 2022.2.4
 #ENV IDEA_VERSION 2022.2.4
-ENV IDEA_COMMUNITY_VERSION 2022.2.4
+#ENV IDEA_COMMUNITY_VERSION 2022.2.4
 #ENV WEBSTORM_VERSION 2022.2.3
 #ENV RUBYMINE_VERSION 2022.2.4
 #ENV GOLAND_VERSION 2022.2.5
@@ -28,12 +28,12 @@ LABEL \
 	vendor="sindria"
 
 # Install Git Sindria
-RUN cd /tmp && \
-    git clone https://github.com/SindriaInc/git-sindria.git && \
-    cd git-sindria && \
-    make && \
-    make install && \
-    rm -Rf /tmp/git-sindria
+#RUN cd /tmp && \
+#    git clone https://github.com/SindriaInc/git-sindria.git && \
+#    cd git-sindria && \
+#    make && \
+#    make install && \
+#    rm -Rf /tmp/git-sindria
 
 # Install Telegram Desktop
 #RUN wget https://updates.tdesktop.com/tlinux/tsetup.${TELEGRAM_DESKTOP_VERSION}.tar.xz -P ${SINDRIA_USER_HOME} && \
@@ -55,26 +55,26 @@ RUN wget https://download-installer.cdn.mozilla.net/pub/devedition/releases/${FI
     ln -s /opt/firefox-developer/firefox /usr/local/bin/firefox-developer
 
 # Install Google-Chrome
-COPY resources/scripts/chrome.sh /opt/chrome/chrome.sh
-RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm -P ${SINDRIA_USER_HOME} && \
-    dnf install ${SINDRIA_USER_HOME}/google-chrome-stable_current_x86_64.rpm -y && \
-    rm -rf ${SINDRIA_USER_HOME}/*.rpm && \
-    dnf clean all && \
-    chmod +x /opt/chrome/chrome.sh && \
-    ln -s /opt/chrome/chrome.sh /usr/local/bin/chrome
+#COPY resources/scripts/chrome.sh /opt/chrome/chrome.sh
+#RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm -P ${SINDRIA_USER_HOME} && \
+#    dnf install ${SINDRIA_USER_HOME}/google-chrome-stable_current_x86_64.rpm -y && \
+#    rm -rf ${SINDRIA_USER_HOME}/*.rpm && \
+#    dnf clean all && \
+#    chmod +x /opt/chrome/chrome.sh && \
+#    ln -s /opt/chrome/chrome.sh /usr/local/bin/chrome
 
 # Install postman
-RUN cd /opt && \
-    curl -X GET https://dl.pstmn.io/download/latest/linux64 -o postman.tar.gz && \
-    tar xzvf postman.tar.gz && \
-    rm -rf /opt/*.tar.gz && \
-    ln -s /opt/Postman/Postman /usr/local/bin/postman
+#RUN cd /opt && \
+#    curl -X GET https://dl.pstmn.io/download/latest/linux64 -o postman.tar.gz && \
+#    tar xzvf postman.tar.gz && \
+#    rm -rf /opt/*.tar.gz && \
+#    ln -s /opt/Postman/Postman /usr/local/bin/postman
 
 # Install sublime text
-RUN rpm -v --import https://download.sublimetext.com/sublimehq-rpm-pub.gpg && \
-    dnf config-manager --add-repo https://download.sublimetext.com/rpm/stable/x86_64/sublime-text.repo && \
-    dnf install sublime-text -y && \
-    dnf clean all
+#RUN rpm -v --import https://download.sublimetext.com/sublimehq-rpm-pub.gpg && \
+#    dnf config-manager --add-repo https://download.sublimetext.com/rpm/stable/x86_64/sublime-text.repo && \
+#    dnf install sublime-text -y && \
+#    dnf clean all
 
 # Install PhpStorm
 #RUN wget https://download-cf.jetbrains.com/webide/PhpStorm-${PHPSTORM_VERSION}.tar.gz -P /opt && \
@@ -91,11 +91,11 @@ RUN rpm -v --import https://download.sublimetext.com/sublimehq-rpm-pub.gpg && \
 #    ln -s /opt/pycharm/bin/pycharm.sh /usr/local/bin/pycharm
 
 # Install PyCharm Community
-RUN wget https://download-cf.jetbrains.com/python/pycharm-community-${PYCHARM_COMMUNITY_VERSION}.tar.gz -P /opt && \
-    tar xzf /opt/pycharm-community-${PYCHARM_COMMUNITY_VERSION}.tar.gz -C /opt && \
-    rm -rf /opt/*.tar.gz && \
-    mv /opt/pycharm-community* /opt/pycharm-community && \
-    ln -s /opt/pycharm-community/bin/pycharm.sh /usr/local/bin/pycharm-community
+#RUN wget https://download-cf.jetbrains.com/python/pycharm-community-${PYCHARM_COMMUNITY_VERSION}.tar.gz -P /opt && \
+#    tar xzf /opt/pycharm-community-${PYCHARM_COMMUNITY_VERSION}.tar.gz -C /opt && \
+#    rm -rf /opt/*.tar.gz && \
+#    mv /opt/pycharm-community* /opt/pycharm-community && \
+#    ln -s /opt/pycharm-community/bin/pycharm.sh /usr/local/bin/pycharm-community
 
 # Install Idea
 #RUN wget https://download-cf.jetbrains.com/idea/ideaIU-${IDEA_VERSION}.tar.gz -P /opt && \
@@ -105,11 +105,11 @@ RUN wget https://download-cf.jetbrains.com/python/pycharm-community-${PYCHARM_CO
 #    ln -s /opt/idea/bin/idea.sh /usr/local/bin/idea
 
 # Install Idea Community
-RUN wget https://download-cf.jetbrains.com/idea/ideaIC-${IDEA_COMMUNITY_VERSION}.tar.gz -P /opt && \
-    tar xzf /opt/ideaIC-${IDEA_COMMUNITY_VERSION}.tar.gz -C /opt && \
-    rm -rf /opt/*.tar.gz && \
-    mv /opt/idea-IC-* /opt/idea-community && \
-    ln -s /opt/idea-community/bin/idea.sh /usr/local/bin/idea-community
+#RUN wget https://download-cf.jetbrains.com/idea/ideaIC-${IDEA_COMMUNITY_VERSION}.tar.gz -P /opt && \
+#    tar xzf /opt/ideaIC-${IDEA_COMMUNITY_VERSION}.tar.gz -C /opt && \
+#    rm -rf /opt/*.tar.gz && \
+#    mv /opt/idea-IC-* /opt/idea-community && \
+#    ln -s /opt/idea-community/bin/idea.sh /usr/local/bin/idea-community
 
 # Install WebStorm
 #RUN wget https://download-cf.jetbrains.com/webstorm/WebStorm-${WEBSTORM_VERSION}.tar.gz -P /opt && \
